Made minor ui changes

--- a/home.html
+++ b/home.html
@@ -41,6 +41,8 @@
         </div>
       </div>
       <div id="search-results" class="container">
+        <h2 class="text-center">Look at all of the events...</h2>
+        <hr>
         <div class="card result-card">
           <div class="card-body">
             <h5 class="card-title">Artist/Band: Drake</h5>
