--- a/profile.html
+++ b/profile.html
@@ -37,7 +37,7 @@
       </div>
 
       <div id="profile" class="container-fluid">
-        <h1>What's up User's Name!! You've been busy.</h1>
+        <h2 class="text-center">What's up User's Name!! You've been busy.</h2>
         <hr>
         <div class="row">
             <div class="col-3">
