--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
             <div class="row no-gutters">
               <div class="col-md-4" >
                 <div class="main-page-logo">
-                    <h2>Welcome to the bandWAG<i class="far fa-grin-tongue-squint"></i>N</h2>
+                    <h2 class="text-success">Welcome to the bandWAG<i class="far fa-grin-tongue-squint"></i>N</h2>
                     <p style="color: white">Discover millions of events, get alerts about your favorite artists, bands and more — plus always- secure, effortless ticketing.</p>
                 </div>
                 <img  src="images/concert3.jpg" class="card-img" alt="bandwagon">
